[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/menus/Intro.gd" type="Script" id=1]
[ext_resource path="res://sprites/menus/intro/Silhouette.png" type="Texture" id=2]
[ext_resource path="res://sprites/menus/intro/Computer.png" type="Texture" id=3]
[ext_resource path="res://sprites/menus/intro/ComputerOffScreen.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0470588, 0.772549, 0.0352941, 1 )
expand_margin_left = 3.0
expand_margin_right = 2.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="Animation" id=3]
resource_name = "outro"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Computer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "shrink"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Silhouette:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.2, 0.2 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "warp"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("Silhouette:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 114, 78 ), Vector2( 159, 48 ), Vector2( 204, 78 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Silhouette:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Silhouette:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 80.0
margin_top = 60.0
margin_right = 240.0
margin_bottom = 180.0
rect_min_size = Vector2( 160, 120 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 1.0
margin_right = -9.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.0470588, 0.772549, 0.0352941, 1 )
text = "\"Into the Deep Web\"

by Jon Topielski

A short game about venturing into the deep web.

Made in 48h for LD48.

"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 128.0
margin_top = 163.0
margin_right = 176.0
margin_bottom = 176.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.0470588, 0.772549, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.772549, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0.0470588, 0.772549, 0.0352941, 1 )
enabled_focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComputerOff" type="Sprite" parent="."]
position = Vector2( 206, 86 )
texture = ExtResource( 4 )

[node name="Computer" type="Sprite" parent="."]
position = Vector2( 206, 86 )
texture = ExtResource( 3 )

[node name="Silhouette" type="Sprite" parent="."]
position = Vector2( 114, 78 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/outro = SubResource( 3 )
anims/shrink = SubResource( 4 )
anims/warp = SubResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
